Fixed header hero spacing issues

--- a/css/desktop-front.css
+++ b/css/desktop-front.css
@@ -124,7 +124,7 @@
 }
 
 .hero-header-widget {
-	padding: 15px;
+	padding: 5px 15px;
 }
 
 #all-blogposts-container {
